# verbose-chainsaw-quarantine-days

./: .gitignore  README.md
DataStructures/1singlyLinkedList/: singlyLinkedList.cpp  singlyLinkedList.h  singly_linked_list  singly_linked_list.rs
Matlab/Matlab_4_pros/: a11_1_schur_decomposition.m  a15_1_basic_image.m  a15_3_filtering_using_2D_fft.m  a4_1_functions.m
Matlab/Simulink/: a3_3_addition_example.slx  a3_3_example_intergration.slx  a3_4_cosine_trigonometry_single_scope.slx  a3_4_example_exponential.slx  a3_4_example_non_linear.slx  a3_4_example_trigonometry.slx  a4_3_1_initial_function.slx  a6_1_solving_mathematical_equations.slx  a6_2_solving_high_level_equations.slx  a6_3_solving_non_linear_equations.slx  a6_4_solving_multiple_variable_equations.slx  modelling_with_standard_blocks.slx  modelling_with_state_space.slx  modelling_with_transfer_function.slx  modelling_with_zero_and_pole_model.slx
QuantumComputing/Qiskit/: 00_Introduction_to_Qiskit.ipynb  01Introduction.ipynb  01Probability_distributions.ipynb  02_Measurements_and_Mixed_States.ipynb  03_Evolution_in_Closed_and_Open_Systems.ipynb  (+11 more)
RustJourney/: README.md
RustJourney/microservices/a06_2_random_service_with_logging/: Cargo.toml
RustJourney/microservices/a08_image_service/: Cargo.toml
RustJourney/microservices/a08_image_service/src/: main.rs
RustJourney/random_projects/a07_simple_crud_app/: .env  Cargo.toml
RustJourney/random_projects/a07_simple_crud_app/migrations/2020-04-22-225506_heroes/: up.sql
RustJourney/random_projects/a07_simple_crud_app/src/: db.rs  hero.rs  main.rs  schema.rs
(+41 files in other folders)
