[package]
name = "a08_image_service"
version = "0.1.0"
authors = ["0x6f736f646f <blackd0t@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.0"
regex = "1.0"
futures = "0.1"
tokio = "0.1"
hyper = "0.12"
hyper-staticfile = "0.3"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"