[package]
name = "a07_simple_crud_app"
version = "0.1.0"
authors = ["0x6f736f646f <blackd0t@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
rocket = "0.4"
rocket_codegen = "*"
serde = "*"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "*", features = ["postgres"] }
diesel_codegen = { version = "*", features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]